--- a/main.html
+++ b/main.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
   <div ng-app="footer" ng-controller="footerController as footerCtrl">
     <footer-info></footer-info>
 
   </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-  <script src="./main.js"></script>
+  <script src="node_modules/angular/angular.min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
