--- a/main.html
+++ b/main.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  <div ng-app="footer" ng-controller="footerController as footerCtrl">
-    <footer-info></footer-info>
+  <div ng-app="footer" ng-controller="footerController">
+    <cfooter info='demostar'></cfooter>
+    <cfooter info='beibi'></cfooter>
+    <cfooter info='qiming'></cfooter>
 
   </div>
   <script src="node_modules/angular/angular.min.js"></script>
