--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <cfooter info='qiming'></cfooter>
 
   </div>
-  <script src="node_modules/angular/angular.min.js"></script>
+  <script src="node_modules/angular/angular.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
